fixed alignment

--- a/public/clientuser/documentindex.css
+++ b/public/clientuser/documentindex.css
@@ -1,7 +1,28 @@
 .table {
     border-radius:0px;
     overflow:auto;
-    height:100vh;
+    height:80vh;
+    position:sticky;
+}
+
+#index {
+    width:3%;
+}
+
+#name {
+    width:32%;
+}
+
+#created {
+    width:10%;
+}
+
+#size {
+    width:15%;
+}
+
+#navigationdot{
+    width:10%;
 }
 
 .tableDocument thead th:first-child {
